--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_height="?attr/actionBarSize">
 
             <ImageView
-                android:id="@+id/home_left_drawer_btn"
+                android:id="@+id/main_left_drawer_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/btn_home_menu"
@@ -37,10 +37,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 여행기록하기 메뉴바 -->
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_user_cl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_home_trip_record"
@@ -117,30 +119,105 @@
 
             </LinearLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_home_cl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:id="@+id/main_home_title_fl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:id="@+id/main_home_title_iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="77dp"
+                    android:src="@drawable/img_titlebar_basic"
+                    app:layout_constraintTop_toBottomOf="@id/trip_topbar_layout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:scaleType="fitXY"
+                    tools:ignore="ContentDescription" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="25dp">
+                    <TextView
+                        android:id="@+id/tripcourse_period_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="21년 03월 10일 ~ 11일"
+                        android:textColor="@color/black"
+                        android:textSize="11sp"
+                        android:fontFamily="@font/notosans_kr_medium"
+                        android:includeFontPadding="false"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toTopOf="@id/tripcourse_title_tv"
+                        app:layout_constraintEnd_toStartOf="@id/tripcourse_period_str_tv"/>
+
+                    <TextView
+                        android:id="@+id/tripcourse_period_str_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosans_kr_regular"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/black"
+                        android:textSize="9sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/tripcourse_period_tv"
+                        app:layout_constraintBottom_toBottomOf="@id/tripcourse_period_tv"
+                        tools:text="의 추억" />
+                    <TextView
+                        android:id="@+id/tripcourse_title_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="갑자기 떠난 1박 2일 제주"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/notosans_kr_bold"
+                        android:includeFontPadding="false"
+                        app:layout_constraintTop_toBottomOf="@id/tripcourse_period_tv"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </FrameLayout>
+
+            <View
+                android:id="@+id/main_content_view"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/main_home_title_fl"/>
+
+            <!-- 리사이클러뷰 -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/main_home_rv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:paddingHorizontal="15dp"
+                android:scrollbars="vertical"
+                android:overScrollMode="never"
+                android:scrollbarThumbVertical="@color/tripbook_main_3"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@id/main_home_title_fl"
+                tools:listitem="@layout/item_card"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- 여행 콘텐츠 스와이프 -->
-        <FrameLayout
-            android:id="@+id/main_content_fl"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/main_content_vp"
-                android:layout_gravity="center"
-                android:clipToPadding="false"
-                android:clipChildren="false"
-                android:scaleType="fitXY"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <me.relex.circleindicator.CircleIndicator3
-                android:id="@+id/main_content_ci"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="bottom"/>
-        </FrameLayout>
     </LinearLayout>
 
     <!--자식 레이아웃. Navigation Drawer-->
@@ -151,4 +228,5 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/activity_main_left_drawer_header"
         app:menu="@menu/activity_main_left_drawer" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
