--- a/app/src/main/res/layout/item_user_my_past_trip.xml
+++ b/app/src/main/res/layout/item_user_my_past_trip.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:layout_marginHorizontal="20dp"
+    android:clipToPadding="false"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
